--- a/ibm_dashboard/src/pages/Welcome/Welcome.css
+++ b/ibm_dashboard/src/pages/Welcome/Welcome.css
@@ -1,29 +1,85 @@
 body{
-    justify-content: center;
-    height: 100vh;
-    background-color:floralwhite;
+    background-color: floralwhite;
 }
 
-
-.container {
-    position: relative; /* make the container a positioning context */
-    width: 90%;
-    height: 90%;
-    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
-    border-radius: 5px;
-    background-color: rgba(255, 255, 255, .15);
-    backdrop-filter: blur(5px);
-    z-index: 1;
+.launch-screen {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
   
-.container img {
-    position: absolute; /* position the image relative to the container */
+.background {
+    border-radius: 25px;
+    background-image: url('https://cdn.discordapp.com/attachments/1074703087278755850/1102815137565515786/800px-Sea_Otter_28Enhydra_lutris29_282516979052429_crop.png');
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+    width: 50%;
+    position: absolute;
+    right: 0;
     top: 0;
-    left: 0;
+    z-index: -1;
+}
+  
+.content{
+    text-align: left;
+    z-index: 1;
+    width: 50%;
+    padding: 2rem;
+}
+  
+.logo {
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/5/51/IBM_logo.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 150px;
+    width: 150px;
+    margin-bottom: 2rem;
+}
+  
+.title {
+    font-size: 3rem;
+    margin-top: 0;
+    margin-bottom: 2rem;
+}
+  
+.description {
+    font-size: 1.5rem;
+    margin-top: 0;
+    margin-bottom: 2rem;
+    max-width: 500px;
+}
+  
+.cta-button {
+    font-size: 1.5rem;
+    background-color: #006699;
+    color: white;
+    border: none;
+    padding: 1rem 2rem;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+}
+  
+.cta-button:hover {
+    background-color: #007acc;
+}
+  
+  
+/* .welcome-screen{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+body{
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    z-index: 2;
+    background-color:floralwhite;
 }
 
 .split-screen {
@@ -39,6 +95,14 @@ body{
 }
   
 .right {
-    width: 50%;
+    width: 40%;
 }
-  
+
+.image {
+    border-radius: 70px;
+    padding: 5px;
+    height: auto;
+    width: inherit;
+
+}
+   */
