THE OTTER UPDATE: The welcome page is finished, not routing to main dashboard yet

--- a/ibm_dashboard/src/components/DropzoneButton/Dropzone.css
+++ b/ibm_dashboard/src/components/DropzoneButton/Dropzone.css
@@ -1,36 +1,17 @@
 /* Styles for the Dropzone component */
-.dropzone {
-    border: 2px dashed #333 ;
-    border-radius: 5px ;
-    padding: 20px ;
-    text-align: center ;
-    background-color: #4caed8;
-    align-items: center;
-    justify-content: center;
-    display: grid;
-    width: 50%;
-}
 
-.dropzone p {
-    margin: 0;
-    font-size: 16px;
+.cta-button {
+    border: 2px dashed #0f11109e ;
+    font-size: 1.5rem;
+    background-color: #006699;
+    color: white;
+    padding: 1rem 2rem;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+    width: 80%;
 }
-
-.dropzone.active {
-    background-color: #f7f7f7 ;
-}
-
-.dropzone.accept {
-    border-color: #4CAF50 ;
-}
-
-.dropzone.reject {
-    border-color: #FF5252 ;
-}
-
-.dropzone-wrapper {
-    display: flex ;
-    justify-content: center;
-    align-items: center ;
-    height: 100% ;
+  
+.cta-button:hover {
+    background-color: #007acc;
 }
