--- a/src/components/Animation/Animation.css
+++ b/src/components/Animation/Animation.css
@@ -1,44 +1,22 @@
 .animation-container {
-    width: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #007bff;
 }
-  
-.animation {
-    position: relative;
-    width: 100px;
-    height: 100px;
+
+.box {
+  width: 100px;
+  height: 100px;
+  background-color: #3498db;
+  animation-name: spin;
+  animation-duration: 5000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
-  
-.circle {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background-color: #fff;
-    animation: animate 2s ease-in-out infinite;
+
+@keyframes spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
-  
-.circle:nth-child(2) {
-    top: 0;
-    left: 25%;
-}
-  
-.circle:nth-child(3) {
-    top: 0;
-    right: 0;
-}
-  
-@keyframes animate {
-    0% {
-      transform: translateY(0);
-    }
-    50% {
-      transform: translateY(50px);
-    }
-    100% {
-      transform: translateY(0);
-    }
-}
-  
