--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -1,56 +1,52 @@
-.login-container {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-  
-.logo {
-    margin-bottom: 20px;
-}
-  
-.logo h1 {
-    font-size: 3rem;
-}
-  
-.welcome-text {
-    text-align: center;
-    margin-bottom: 20px;
-}
-  
 .login-form {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-  
-.form-group {
-    margin-bottom: 20px;
-}
-  
-label {
-    display: block;
-    margin-bottom: 5px;
-}
-  
-input {
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+    height: 100vh;
+    background-color: #f2f2f2;
+    font-family: Arial, sans-serif;
     width: 100%;
-    max-width: 300px;
 }
   
-.login-btn,
-.login-google-btn {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    background-color: #07c;
-    color: #fff;
-    font-size: 1
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.input-container{
+    padding-top: 15px;
+    width: 50%;
+}
+
+.login-button{
+    display: flex;
+    padding-top: 25px;
+    align-items: center;
+    justify-content: center;
 }
   
+.google-button {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+  
+.forgot-password {
+    margin-top: 5px;
+    text-align: right;
+}
+  
+.forgot-password a {
+    color: #007bff;
+    text-decoration: none;
+}
+  
+.forgot-password a:hover {
+    text-decoration: underline;
+}
