--- a/src/components/OtterAnimation/OtterAnimation.css
+++ b/src/components/OtterAnimation/OtterAnimation.css
@@ -1,13 +1,17 @@
 .video-container {
+    display: flex;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     /* padding-bottom: 56.25%; */
     position: relative;
     background-color: #9ADED6;
+    align-items: center;
+
   }
   
 .video-player {
     width: 100%;
+    border-color: #9ADED6;
 }
   
   
