--- a/src/pages/Welcome/Welcome.css
+++ b/src/pages/Welcome/Welcome.css
@@ -35,7 +35,7 @@ body{
     background-repeat: no-repeat;
     height: 150px;
     width: 150px;
-    margin-bottom: 2rem;
+    /* margin-bottom: 2rem; */
 }
   
 .title {
