--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -57,7 +57,6 @@ form {
 .bottom{
     position: absolute;
     bottom: 10px;
-    
 }
 
 .sign-up{
@@ -68,4 +67,13 @@ form {
 
 .sign-up:hover{
     text-decoration: underline;
+}
+
+.logo-login {
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/5/51/IBM_logo.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 150px;
+    width: 150px;
+    /* margin-bottom: 2rem; */
 }
