--- a/src/components/DropzoneButton/Dropzone.css
+++ b/src/components/DropzoneButton/Dropzone.css
@@ -1,10 +1,11 @@
 /* Styles for the Dropzone component */
 
+
 .cta-button {
     border: 2px dashed #0f11109e ;
     font-size: 1.5rem;
-    background-color: #006699;
-    color: white;
+    background-color: #52AD9C;
+    color: black;
     padding: 1rem 2rem;
     border-radius: 20px;
     cursor: pointer;
@@ -13,5 +14,5 @@
 }
   
 .cta-button:hover {
-    background-color: #007acc;
+    background-color: #9FFCDF;
 }
